--- a/public/.htaccess
+++ b/public/.htaccess
@@ -16,7 +16,7 @@
 </IfModule>
 
 <IfModule mod_headers.c>
-	Header always set X-XSS-Protection: "1; mode=block"
+    Header always set X-XSS-Protection: "1; mode=block"
     Header always set x-Frame-Options: SAMEORIGIN
     Header always set X-Content-Type-Options: nosniff
     # Header always set Strict-Transport-Security: "max-age=31536000; includeSubDomains"
@@ -41,6 +41,8 @@
     AddOutputFilterByType DEFLATE font/opentype
     AddOutputFilterByType DEFLATE font/otf
     AddOutputFilterByType DEFLATE font/ttf
+    AddOutputFilterByType DEFLATE font/woff
+    AddOutputFilterByType DEFLATE font/woff2
     AddOutputFilterByType DEFLATE image/svg+xml
     AddOutputFilterByType DEFLATE image/x-icon
     AddOutputFilterByType DEFLATE text/css
