--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "runnels/web-starter",
     "description": "Boilerplate to get web project off the ground.",
     "require": {
+        "fullpipe/twig-webpack-extension": "^4.0",
         "php-di/php-di": "^6.3",
         "slim/psr7": "^1.3",
         "slim/slim": "^4.7",
