--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
   },
   "homepage": "https://github.com/wheatbrad/web-starter#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "*",
+    "css-loader": "^5.2.4",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.6.0",
+    "terser-webpack-plugin": "^5.1.2",
     "webpack": "^5.33.2",
-    "webpack-cli": "^4.6.0"
+    "webpack-assets-manifest": "^5.0.6",
+    "webpack-cli": "^4.7.0",
+    "webpack-manifest-plugin": "^3.1.1"
   }
 }
