--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5"
     },
+    "scripts": {
+        "serve": "@php -S localhost:8888 -t public/"
+    },
     "autoload":{
         "psr-4": {
             "App\\": "src/app/"
